<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#d9ead3"
    android:gravity="center_horizontal"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/ingrese_un_n_mero"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnRealizarFibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#38761d"
        android:text="@string/realizar"
        android:contentDescription="@string/descripcion_btn_realizar_fibonacci"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvResultadoFibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar_al_segundo_activity"
        android:layout_marginTop="16dp"
        android:backgroundTint="#38761d"
        android:contentDescription="@string/descripcion_btn_regresar"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
