<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#d9ead3"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_una_conjetura"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnCollatz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/collatz"
        android:backgroundTint="#38761d"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnFibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fibonacci"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#38761d"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnTrianguloPascal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tri_ngulo_de_pascal"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#38761d"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar_al_segundo_activity"
        android:layout_marginTop="16dp"
        android:backgroundTint="#38761d"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
